@@ -102,7 +102,8 @@ void local_filter_update_view(struct view_t *view, int rel_pos);
 /* Accepts current value of local filter. */
 void local_filter_accept(struct view_t *view);
 
-/* Sets local filter non-interactively. */
+/* Sets local filter non-interactively.  List of entries doesn't get updated
+ * immediately, an update is scheduled. */
 void local_filter_apply(struct view_t *view, const char filter[]);
 
 /* Cancels local filter set process.  Restores previous values of the filter. */
