@@ -59,6 +59,9 @@
 	Fixed number of elements in a directory ("nitems") not being updated.
 	Thanks to filterfalse.
 
+	Fixed local filter not being applied to the view after q=.  Thanks to
+	filterfalse.
+
 0.9.1-beta to 0.9.1
 
 	Fixed :clone and :copy refusing to copy broken symbolic links, even though C
